# polymatheia

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGES.md  LICENSE.md  README.md  prepare_release.py  pyproject.toml  readthedocs.yml  requirements.txt  rtd-requirements.txt  tox.ini
.github/workflows/: publish.yaml  tests.yaml  validation.yml
doc/: conf.py  index.rst
doc/api/: index.rst
docs/: concepts.rst  conf.py  index.rst
docs/api/: polymatheia_data.rst  polymatheia_data_reader.rst  polymatheia_data_writer.rst  polymatheia_filter.rst  polymatheia_transform.rst  polymatheia_util.rst
docs/recipes/: csv.rst  europeana.rst  filtering.rst  index.rst  json.rst  oai-pmh.rst  pandas.rst  sru.rst  transforming.rst  xml.rst
src/polymatheia/: __init__.py  filter.py  transform.py  util.py
src/polymatheia/data/: __init__.py  reader.py  writer.py
tests/: europeana_readers_test.py  identifier_to_directory_structure_test.py  navigable_dict_test.py  oai_readers_test.py  polymatheia_test.py  writers_test.py  xml_to_navigable_dict_test.py
tests/data_tests/: iterator_test.py  navigable_dict_test.py  xml_to_navigable_dict_test.py
tests/data_tests/reader_tests/: csv_reader_test.py  europeana_readers_test.py  json_reader_test.py  local_reader_test.py  oai_readers_test.py  sru_readers_test.py  xml_reader_test.py
tests/data_tests/writer_tests/: csv_writer_test.py  json_writer_test.py  local_writer_test.py  pandas_writer_test.py  xml_writer_test.py
tests/filter_tests/: filter_test.py  records_filter_test.py
tests/fixtures/csv_reader_test/: example_csv.csv
tests/fixtures/local_reader_invalid_test/: invalid.json
tests/fixtures/local_reader_test/75/76/62/54/4/: 757662544.json
tests/fixtures/local_reader_test/75/76/63/03/6/: 757663036.json
tests/fixtures/local_reader_test/75/76/63/49/4/: 757663494.json
tests/fixtures/xml_reader_invalid_test/: test.xml
tests/transform_tests/: records_transform_test.py  transform_test.py
(+7 files in other folders)
