[tool.poetry]
name = "polymatheia"
version = "1.0.0"
description = "A python library to support digital archive metadata use"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"
readme = "README.md"
homepage = "https://polymatheia.readthedocs.io"
repository = "https://github.com/scmmmh/polymatheia"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.8"
munch = "^2.5.0"
lxml = "^4.5.2"
requests = "^2.24.0"
pandas = "^1.1.0"
deprecation = "^2.1.0"
srupy = "^0.0.45"
Sickle = "^0.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-print = "^3.1.4"
pre-commit = "^2.6.0"
pytest = "^7.1.2"
pytest-cov = "^2.10.0"
flake8-docstrings = "^1.5.0"
pylint = "^2.5.3"
tox = "^3.18.0"
tox-pyenv = "^1.1.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
